--- a/tests_notebook/test_pose_graph_with_theseus.ipynb
+++ b/tests_notebook/test_pose_graph_with_theseus.ipynb
@@ -347,12 +347,14 @@
     "    edge_list = []\n",
     "\n",
     "    abs_pose_list_gt.append(th.SE3(\n",
-    "        tensor=torch.tile(torch.eye(3, 4), [1, 1, 1]),\n",
+    "        #tensor=torch.tile(torch.eye(3, 4), [1, 1, 1]),\n",
+    "        tensor=torch.eye(3, 4).unsqueeze(0),\n",
     "        name=\"VERTEX_SE3_GT__0\"\n",
     "        ))\n",
     "    \n",
     "    abs_pose_list.append(th.SE3(\n",
-    "        tensor=torch.tile(torch.eye(3, 4), [1, 1, 1]),\n",
+    "        #tensor=torch.tile(torch.eye(3, 4), [1, 1, 1]),\n",
+    "        tensor=torch.eye(3, 4).unsqueeze(0),\n",
     "        name=\"VERTEX_SE3__0\"\n",
     "        ))\n",
     "\n",
@@ -360,7 +362,10 @@
     "\n",
     "        # ground truth relative pose from frame_{idx-1} to frame_{idx}\n",
     "        relative_pose_gt = th.SE3.exp_map(\n",
-    "            torch.cat([torch.rand(batch_size, 3)-0.5, 2.0 * torch.rand(batch_size, 3)-1], dim=1),\n",
+    "            torch.cat([\n",
+    "                torch.rand(batch_size, 3) - 0.5, \n",
+    "                 2.0 * torch.rand(batch_size, 3 ) -1\n",
+    "            ], dim=1),\n",
     "        )\n",
     "\n",
     "        # generate points represented in frame_{idx}\n",
@@ -369,6 +374,7 @@
     "        point_list.append(points)\n",
     "\n",
     "        # add noise to get odometry relative pose from frame_{idx-1} to frame_{idx}\n",
+    "        \n",
     "        relative_pose_noise = th.SE3.exp_map(\n",
     "            torch.cat([\n",
     "                translation_noise * (2.0 * torch.rand(batch_size, 3) - 1),\n",
@@ -377,14 +383,17 @@
     "        )\n",
     "\n",
     "        relative_pose = cast(th.SE3, relative_pose_noise.compose(relative_pose_gt))\n",
+    "        #relative_pose = cast(th.SE3, relative_pose_gt.compose(relative_pose_noise))\n",
     "        relative_pose.name = f\"EDGE_SE3__{idx-1}_{idx}\"\n",
     "        cost_weight = th.ScaleCostWeight(weight, name=f\"EDGE_WEIGHT__{idx-1}_{idx}\")\n",
     "\n",
     "        # absolute pose of frame_{idx}\n",
     "        absolute_pose_gt = cast(th.SE3, abs_pose_list_gt[-1].compose(relative_pose_gt.inverse()))\n",
+    "        #absolute_pose_gt = cast(th.SE3, abs_pose_list_gt[-1].compose(relative_pose_gt))\n",
     "        absolute_pose_gt.name = f\"VERTEX_SE3_GT__{idx}\"\n",
     "\n",
     "        absolute_pose = cast(th.SE3, abs_pose_list[-1].compose(relative_pose.inverse()))\n",
+    "        #absolute_pose = cast(th.SE3, abs_pose_list[-1].compose(relative_pose))\n",
     "        absolute_pose.name = f\"VERTEX_SE3__{idx}\"\n",
     "\n",
     "        abs_pose_list_gt.append(absolute_pose_gt)\n",
@@ -452,20 +461,26 @@
       "adding an odometry edge to pose graph.\n",
       "adding an odometry edge to pose graph.\n",
       "adding an loop edge to pose graph.\n",
-      "cost_weight_mu = 4.4721360206604\n",
+      "cost_weight_mu = 2.0\n",
       "adding an loop edge to pose graph.\n",
-      "cost_weight_mu = 4.4721360206604\n",
+      "cost_weight_mu = 2.0\n",
       "adding an loop edge to pose graph.\n",
-      "cost_weight_mu = 4.4721360206604\n"
+      "cost_weight_mu = 2.0\n"
      ]
     }
    ],
    "source": [
-    "point_list, abs_pose_gt_list, abs_pose_list, edge_list = create_data()\n",
+    "point_list, abs_pose_gt_list, abs_pose_list, edge_list = create_data(\n",
+    "    num_poses=10,\n",
+    "    num_pts=100,\n",
+    "    rotation_noise=1e-3,\n",
+    "    translation_noise=1e-3\n",
+    ")\n",
     "add_loop_data(0, 7, abs_pose_gt_list, edge_list)\n",
     "add_loop_data(1, 8, abs_pose_gt_list, edge_list)\n",
     "add_loop_data(2, 9, abs_pose_gt_list, edge_list)\n",
     "#add_loop_data(0, 9, abs_pose_gt_list, edge_list)\n",
+    "\n",
     "\n",
     "rot_error_before = []\n",
     "trans_error_before = []\n",
@@ -473,13 +488,16 @@
     "    abs_pose = abs_pose_list[idx]\n",
     "    rot = abs_pose.rotation().tensor.squeeze()\n",
     "    trans = abs_pose.translation().tensor\n",
+    "    #trans = abs_pose.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    abs_pose_gt = abs_pose_gt_list[idx]\n",
     "    rot_gt = abs_pose_gt.rotation().tensor.squeeze()\n",
-    "    trans_gt = abs_pose.translation().tensor\n",
+    "    #trans_gt = abs_pose_gt.translation().tensor\n",
+    "    trans_gt = abs_pose_gt.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    rot_error_before.append(torch.acos((torch.trace(torch.matmul(rot.t(), rot_gt)) - 1) / 2))\n",
-    "    trans_error_before.append(torch.abs(trans @ trans_gt.t().squeeze()))\n",
+    "    #trans_error_before.append(torch.abs(trans @ trans_gt.t().squeeze()))\n",
+    "    trans_error_before.append(torch.norm(trans - trans_gt))\n",
     "\n",
     "\n",
     "print(\"Constructing a pose graph for Gaussian Splatting SLAM.\")\n",
@@ -510,39 +528,41 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First step optimization, dealing with 6003 cost functions\n",
-      "Second step optimization, dealing with 6003 cost functions\n",
-      "NonlinearOptimizerInfo(best_solution={'VERTEX_SE3__0': tensor([[[ 0.9903, -0.1386,  0.0092,  0.0412],\n",
-      "         [ 0.1388,  0.9900, -0.0260, -0.0371],\n",
-      "         [-0.0055,  0.0270,  0.9996,  0.0011]]]), 'VERTEX_SE3__1': tensor([[[ 0.9056,  0.1018, -0.4116,  0.0767],\n",
-      "         [-0.1763,  0.9733, -0.1471, -0.4781],\n",
-      "         [ 0.3857,  0.2058,  0.8994,  0.4186]]]), 'VERTEX_SE3__2': tensor([[[ 0.9785, -0.1282, -0.1617,  0.0159],\n",
-      "         [-0.0254,  0.7030, -0.7108, -0.4701],\n",
-      "         [ 0.2048,  0.6996,  0.6846, -0.1325]]]), 'VERTEX_SE3__3': tensor([[[ 0.6741,  0.4223, -0.6060,  0.1170],\n",
-      "         [-0.4958,  0.8668,  0.0526, -0.0208],\n",
-      "         [ 0.5475,  0.2651,  0.7937, -0.0783]]]), 'VERTEX_SE3__4': tensor([[[ 0.2038,  0.5074, -0.8373, -0.3919],\n",
-      "         [-0.9473,  0.3183, -0.0376, -0.0367],\n",
-      "         [ 0.2474,  0.8008,  0.5455, -0.1350]]]), 'VERTEX_SE3__5': tensor([[[ 0.6056, -0.5606, -0.5648,  0.0054],\n",
-      "         [-0.0893,  0.6574, -0.7483, -0.4621],\n",
-      "         [ 0.7907,  0.5036,  0.3480, -0.2759]]]), 'VERTEX_SE3__6': tensor([[[-0.2779,  0.0974, -0.9557,  0.2193],\n",
-      "         [-0.0783,  0.9892,  0.1236, -0.0246],\n",
-      "         [ 0.9574,  0.1092, -0.2672, -0.6101]]]), 'VERTEX_SE3__7': tensor([[[-0.8943, -0.0374, -0.4460,  0.0949],\n",
-      "         [ 0.2369,  0.8059, -0.5426,  0.1200],\n",
-      "         [ 0.3797, -0.5909, -0.7118, -0.1747]]]), 'VERTEX_SE3__8': tensor([[[-0.7483,  0.6571, -0.0904, -0.5203],\n",
-      "         [ 0.6286,  0.7461,  0.2197, -0.0589],\n",
-      "         [ 0.2118,  0.1076, -0.9714, -0.2243]]]), 'VERTEX_SE3__9': tensor([[[-0.3998,  0.9011, -0.1681, -1.0046],\n",
-      "         [ 0.6316,  0.1379, -0.7629, -0.1558],\n",
-      "         [-0.6643, -0.4111, -0.6243, -0.5810]]]), 'line_process_0_7': tensor([[0.8305]]), 'line_process_1_8': tensor([[0.9303]]), 'line_process_2_9': tensor([[0.6131]])}, status=array([<NonlinearOptimizerStatus.CONVERGED: 1>], dtype=object), converged_iter=tensor([6]), best_iter=tensor([4]), err_history=None, last_err=tensor([8.7487]), best_err=tensor([8.7487]), state_history=None)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "NonlinearOptimizerInfo(best_solution={'VERTEX_SE3__0': tensor([[[ 1.0000e+00,  1.7481e-03, -3.3121e-03,  2.1088e-03],\n",
+       "         [-1.7480e-03,  1.0000e+00,  4.9391e-05, -4.0411e-03],\n",
+       "         [ 3.3122e-03, -4.3601e-05,  1.0000e+00, -1.8621e-03]]]), 'VERTEX_SE3__1': tensor([[[ 0.5511, -0.2059, -0.8086,  0.3082],\n",
+       "         [-0.0522,  0.9587, -0.2797, -0.1478],\n",
+       "         [ 0.8328,  0.1964,  0.5175,  0.1600]]]), 'VERTEX_SE3__2': tensor([[[ 0.0159,  0.2135, -0.9768,  0.4148],\n",
+       "         [ 0.5701,  0.8006,  0.1843, -0.1026],\n",
+       "         [ 0.8214, -0.5598, -0.1089,  0.2680]]]), 'VERTEX_SE3__3': tensor([[[-0.3713,  0.7687, -0.5209,  0.5513],\n",
+       "         [ 0.4739,  0.6393,  0.6056, -0.1522],\n",
+       "         [ 0.7985, -0.0220, -0.6016,  0.7392]]]), 'VERTEX_SE3__4': tensor([[[-0.3223, -0.0770, -0.9435,  0.3214],\n",
+       "         [ 0.2711,  0.9474, -0.1699, -0.1065],\n",
+       "         [ 0.9070, -0.3105, -0.2845,  0.4638]]]), 'VERTEX_SE3__5': tensor([[[-0.9503, -0.1541, -0.2705,  0.2047],\n",
+       "         [-0.3088,  0.5778,  0.7555,  0.0421],\n",
+       "         [ 0.0399,  0.8015, -0.5967,  1.0006]]]), 'VERTEX_SE3__6': tensor([[[-0.3615, -0.9040,  0.2284,  0.3825],\n",
+       "         [-0.8906,  0.4073,  0.2025,  0.3215],\n",
+       "         [-0.2761, -0.1302, -0.9523,  0.9716]]]), 'VERTEX_SE3__7': tensor([[[-0.4223, -0.4760, -0.7714,  0.2257],\n",
+       "         [-0.7463,  0.6656, -0.0022,  0.5448],\n",
+       "         [ 0.5145,  0.5748, -0.6363,  0.6266]]]), 'VERTEX_SE3__8': tensor([[[-0.8434, -0.4110, -0.3461, -0.2649],\n",
+       "         [-0.5372,  0.6341,  0.5562,  0.7218],\n",
+       "         [-0.0091,  0.6550, -0.7556,  0.4621]]]), 'VERTEX_SE3__9': tensor([[[-0.5576,  0.7001, -0.4461,  0.1250],\n",
+       "         [-0.2503,  0.3706,  0.8944,  0.4976],\n",
+       "         [ 0.7915,  0.6104, -0.0315,  0.4190]]]), 'line_process_0_7': tensor([[0.9991]]), 'line_process_1_8': tensor([[0.9985]]), 'line_process_2_9': tensor([[0.9991]])}, status=array([<NonlinearOptimizerStatus.CONVERGED: 1>], dtype=object), converged_iter=tensor([572]), best_iter=tensor([570]), err_history=None, last_err=tensor([0.0068]), best_err=tensor([0.0068]), state_history=None)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#print(pose_graph._objective.error().shape)\n",
-    "info = pose_graph.optimize_two_steps(max_iterations=1e3, step_size=0.01, l_ij_threshold=0.25, damping=0.2, verbose=False)\n",
-    "print(info)"
+    "pose_graph._optimize(max_iterations=1e3, step_size=0.01, damping=0.01, verbose=False)\n",
+    "#info = pose_graph.optimize_two_steps(max_iterations=1e3, step_size=0.01, l_ij_threshold=0.25, damping=0.2, verbose=False)\n",
+    "#print(info)"
    ]
   },
   {
@@ -555,35 +575,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rotation error of vertex_0 before optimization 0.0, after optimization: 0.14179269969463348\n",
-      "Translation error of vertex_0 before optimization tensor([0.]), after optimization: tensor([0.0362])\n",
+      "Rotation error of vertex_0 before optimization 0.0, after optimization: 0.0\n",
+      "Translation error of vertex_0 before optimization 0.0, after optimization: 0.0049241213127970695\n",
       "\n",
-      "Rotation error of vertex_1 before optimization 0.09143700450658798, after optimization: 0.17226608097553253\n",
-      "Translation error of vertex_1 before optimization tensor([0.3772]), after optimization: tensor([0.2458])\n",
+      "Rotation error of vertex_1 before optimization nan, after optimization: nan\n",
+      "Translation error of vertex_1 before optimization 0.0007512992597185075, after optimization: 0.002209974220022559\n",
       "\n",
-      "Rotation error of vertex_2 before optimization 0.1421356052160263, after optimization: 0.18285486102104187\n",
-      "Translation error of vertex_2 before optimization tensor([0.1777]), after optimization: tensor([0.1342])\n",
+      "Rotation error of vertex_2 before optimization nan, after optimization: 0.003201875602826476\n",
+      "Translation error of vertex_2 before optimization 0.0008897980442270637, after optimization: 0.0023524491116404533\n",
       "\n",
-      "Rotation error of vertex_3 before optimization 0.1864878088235855, after optimization: 0.194672629237175\n",
-      "Translation error of vertex_3 before optimization tensor([0.0111]), after optimization: tensor([0.0687])\n",
+      "Rotation error of vertex_3 before optimization 0.0009765625, after optimization: 0.0037822125013917685\n",
+      "Translation error of vertex_3 before optimization 0.0012935486156493425, after optimization: 0.0027890850324183702\n",
       "\n",
-      "Rotation error of vertex_4 before optimization 0.20782381296157837, after optimization: 0.18346811830997467\n",
-      "Translation error of vertex_4 before optimization tensor([0.1835]), after optimization: tensor([0.4778])\n",
+      "Rotation error of vertex_4 before optimization 0.001691456069238484, after optimization: 0.004085256718099117\n",
+      "Translation error of vertex_4 before optimization 0.0021228499244898558, after optimization: 0.0020404031965881586\n",
       "\n",
-      "Rotation error of vertex_5 before optimization 0.28385910391807556, after optimization: 0.24763841927051544\n",
-      "Translation error of vertex_5 before optimization tensor([0.2883]), after optimization: tensor([0.2268])\n",
+      "Rotation error of vertex_5 before optimization 0.00248975632712245, after optimization: 0.0034870272502303123\n",
+      "Translation error of vertex_5 before optimization 0.002975358162075281, after optimization: 0.0021392374765127897\n",
       "\n",
-      "Rotation error of vertex_6 before optimization 0.3393324613571167, after optimization: 0.2951025366783142\n",
-      "Translation error of vertex_6 before optimization tensor([0.4631]), after optimization: tensor([0.1380])\n",
+      "Rotation error of vertex_6 before optimization 0.003382913302630186, after optimization: 0.004931403789669275\n",
+      "Translation error of vertex_6 before optimization 0.0018442535074427724, after optimization: 0.0009417541441507638\n",
       "\n",
-      "Rotation error of vertex_7 before optimization 0.26353806257247925, after optimization: 0.19048766791820526\n",
-      "Translation error of vertex_7 before optimization tensor([0.0731]), after optimization: tensor([0.0125])\n",
+      "Rotation error of vertex_7 before optimization 0.0028471455443650484, after optimization: 0.003164425492286682\n",
+      "Translation error of vertex_7 before optimization 0.0025477828457951546, after optimization: 0.0025366090703755617\n",
       "\n",
-      "Rotation error of vertex_8 before optimization 0.23816336691379547, after optimization: 0.18378867208957672\n",
-      "Translation error of vertex_8 before optimization tensor([0.2623]), after optimization: tensor([0.6622])\n",
+      "Rotation error of vertex_8 before optimization 0.0034526714589446783, after optimization: 0.0016194458585232496\n",
+      "Translation error of vertex_8 before optimization 0.003531468566507101, after optimization: 0.002878818428143859\n",
       "\n",
-      "Rotation error of vertex_9 before optimization 0.1979781836271286, after optimization: 0.15170465409755707\n",
-      "Translation error of vertex_9 before optimization tensor([1.2406]), after optimization: tensor([1.3710])\n",
+      "Rotation error of vertex_9 before optimization 0.0034526714589446783, after optimization: 0.00444845762103796\n",
+      "Translation error of vertex_9 before optimization 0.00215635122731328, after optimization: 0.0040641287341713905\n",
       "\n"
      ]
     }
@@ -594,14 +614,17 @@
     "for idx in range(len(abs_pose_list)):  \n",
     "    abs_pose_optimized = pose_graph._objective.get_optim_var(f\"VERTEX_SE3__{idx}\")\n",
     "    rot_opt = abs_pose_optimized.rotation().tensor.squeeze()\n",
-    "    trans_opt = abs_pose_optimized.translation().tensor\n",
+    "    #trans_opt = abs_pose_optimized.translation().tensor\n",
+    "    trans_opt = abs_pose_optimized.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    abs_pose_gt = abs_pose_gt_list[idx]\n",
     "    rot_gt = abs_pose_gt.rotation().tensor.squeeze()\n",
-    "    trans_gt = abs_pose.translation().tensor\n",
+    "    #trans_gt = abs_pose_gt.translation().tensor\n",
+    "    trans_gt = abs_pose_gt.to_x_y_z_quaternion()[..., :3]\n",
     "\n",
     "    rot_error_after.append(torch.acos((torch.trace(torch.matmul(rot_opt.t(), rot_gt)) - 1) / 2))\n",
-    "    trans_error_after.append(torch.abs(trans_opt @ trans_gt.t().squeeze()))\n",
+    "    #trans_error_after.append(torch.abs(trans_opt @ trans_gt.t().squeeze()))\n",
+    "    trans_error_after.append(torch.norm(trans_opt - trans_gt))\n",
     "\n",
     "for idx in range(len(abs_pose_list)):  \n",
     "    print(f\"Rotation error of vertex_{idx} before optimization {rot_error_before[idx]}, after optimization: {rot_error_after[idx]}\")\n",
@@ -618,7 +641,7 @@
     {
      "data": {
       "text/plain": [
-       "480"
+       "100"
       ]
      },
      "execution_count": 8,
@@ -644,7 +667,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6027\n",
+      "1227\n",
       "13\n"
      ]
     }
@@ -666,6 +689,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d75d6531-1861-47a8-845c-4a0ce3851ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c26af10-6b9d-4290-9496-ac253a98f6c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca81778-b142-425a-85e5-45dff57e5198",
    "metadata": {},
    "outputs": [],
    "source": []
