--- a/tests_notebook/test_pose_graph_with_theseus.ipynb
+++ b/tests_notebook/test_pose_graph_with_theseus.ipynb
@@ -461,10 +461,6 @@
       "adding an odometry edge to pose graph.\n",
       "adding an odometry edge to pose graph.\n",
       "adding an loop edge to pose graph.\n",
-      "cost_weight_mu = 2.0\n",
-      "adding an loop edge to pose graph.\n",
-      "cost_weight_mu = 2.0\n",
-      "adding an loop edge to pose graph.\n",
       "cost_weight_mu = 2.0\n"
      ]
     }
@@ -473,12 +469,12 @@
     "point_list, abs_pose_gt_list, abs_pose_list, edge_list = create_data(\n",
     "    num_poses=10,\n",
     "    num_pts=100,\n",
-    "    rotation_noise=1e-3,\n",
-    "    translation_noise=1e-3\n",
+    "    rotation_noise=0.1,\n",
+    "    translation_noise=0.05\n",
     ")\n",
-    "add_loop_data(0, 7, abs_pose_gt_list, edge_list)\n",
-    "add_loop_data(1, 8, abs_pose_gt_list, edge_list)\n",
-    "add_loop_data(2, 9, abs_pose_gt_list, edge_list)\n",
+    "add_loop_data(0, 9, abs_pose_gt_list, edge_list)\n",
+    "#add_loop_data(1, 8, abs_pose_gt_list, edge_list)\n",
+    "#add_loop_data(2, 9, abs_pose_gt_list, edge_list)\n",
     "#add_loop_data(0, 9, abs_pose_gt_list, edge_list)\n",
     "\n",
     "\n",
@@ -487,12 +483,10 @@
     "for idx in range(len(abs_pose_list)):\n",
     "    abs_pose = abs_pose_list[idx]\n",
     "    rot = abs_pose.rotation().tensor.squeeze()\n",
-    "    trans = abs_pose.translation().tensor\n",
-    "    #trans = abs_pose.to_x_y_z_quaternion()[..., :3]\n",
+    "    trans = abs_pose.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    abs_pose_gt = abs_pose_gt_list[idx]\n",
     "    rot_gt = abs_pose_gt.rotation().tensor.squeeze()\n",
-    "    #trans_gt = abs_pose_gt.translation().tensor\n",
     "    trans_gt = abs_pose_gt.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    rot_error_before.append(torch.acos((torch.trace(torch.matmul(rot.t(), rot_gt)) - 1) / 2))\n",
@@ -530,27 +524,27 @@
     {
      "data": {
       "text/plain": [
-       "NonlinearOptimizerInfo(best_solution={'VERTEX_SE3__0': tensor([[[ 1.0000e+00,  1.7481e-03, -3.3121e-03,  2.1088e-03],\n",
-       "         [-1.7480e-03,  1.0000e+00,  4.9391e-05, -4.0411e-03],\n",
-       "         [ 3.3122e-03, -4.3601e-05,  1.0000e+00, -1.8621e-03]]]), 'VERTEX_SE3__1': tensor([[[ 0.5511, -0.2059, -0.8086,  0.3082],\n",
-       "         [-0.0522,  0.9587, -0.2797, -0.1478],\n",
-       "         [ 0.8328,  0.1964,  0.5175,  0.1600]]]), 'VERTEX_SE3__2': tensor([[[ 0.0159,  0.2135, -0.9768,  0.4148],\n",
-       "         [ 0.5701,  0.8006,  0.1843, -0.1026],\n",
-       "         [ 0.8214, -0.5598, -0.1089,  0.2680]]]), 'VERTEX_SE3__3': tensor([[[-0.3713,  0.7687, -0.5209,  0.5513],\n",
-       "         [ 0.4739,  0.6393,  0.6056, -0.1522],\n",
-       "         [ 0.7985, -0.0220, -0.6016,  0.7392]]]), 'VERTEX_SE3__4': tensor([[[-0.3223, -0.0770, -0.9435,  0.3214],\n",
-       "         [ 0.2711,  0.9474, -0.1699, -0.1065],\n",
-       "         [ 0.9070, -0.3105, -0.2845,  0.4638]]]), 'VERTEX_SE3__5': tensor([[[-0.9503, -0.1541, -0.2705,  0.2047],\n",
-       "         [-0.3088,  0.5778,  0.7555,  0.0421],\n",
-       "         [ 0.0399,  0.8015, -0.5967,  1.0006]]]), 'VERTEX_SE3__6': tensor([[[-0.3615, -0.9040,  0.2284,  0.3825],\n",
-       "         [-0.8906,  0.4073,  0.2025,  0.3215],\n",
-       "         [-0.2761, -0.1302, -0.9523,  0.9716]]]), 'VERTEX_SE3__7': tensor([[[-0.4223, -0.4760, -0.7714,  0.2257],\n",
-       "         [-0.7463,  0.6656, -0.0022,  0.5448],\n",
-       "         [ 0.5145,  0.5748, -0.6363,  0.6266]]]), 'VERTEX_SE3__8': tensor([[[-0.8434, -0.4110, -0.3461, -0.2649],\n",
-       "         [-0.5372,  0.6341,  0.5562,  0.7218],\n",
-       "         [-0.0091,  0.6550, -0.7556,  0.4621]]]), 'VERTEX_SE3__9': tensor([[[-0.5576,  0.7001, -0.4461,  0.1250],\n",
-       "         [-0.2503,  0.3706,  0.8944,  0.4976],\n",
-       "         [ 0.7915,  0.6104, -0.0315,  0.4190]]]), 'line_process_0_7': tensor([[0.9991]]), 'line_process_1_8': tensor([[0.9985]]), 'line_process_2_9': tensor([[0.9991]])}, status=array([<NonlinearOptimizerStatus.CONVERGED: 1>], dtype=object), converged_iter=tensor([572]), best_iter=tensor([570]), err_history=None, last_err=tensor([0.0068]), best_err=tensor([0.0068]), state_history=None)"
+       "NonlinearOptimizerInfo(best_solution={'VERTEX_SE3__0': tensor([[[ 1.0000e+00, -3.2835e-03,  9.4684e-04,  3.8103e-03],\n",
+       "         [ 3.2858e-03,  1.0000e+00, -2.4134e-03,  8.3034e-04],\n",
+       "         [-9.3891e-04,  2.4165e-03,  1.0000e+00, -1.7211e-03]]]), 'VERTEX_SE3__1': tensor([[[ 0.7452,  0.2528, -0.6170, -0.2593],\n",
+       "         [-0.4842,  0.8413, -0.2402, -0.1890],\n",
+       "         [ 0.4584,  0.4778,  0.7494, -0.1643]]]), 'VERTEX_SE3__2': tensor([[[ 0.3303, -0.2557, -0.9086, -0.2842],\n",
+       "         [-0.9261,  0.0981, -0.3643, -0.0084],\n",
+       "         [ 0.1822,  0.9618, -0.2044,  0.1588]]]), 'VERTEX_SE3__3': tensor([[[ 0.5591, -0.5053, -0.6573,  0.0555],\n",
+       "         [-0.7359,  0.0627, -0.6742,  0.2174],\n",
+       "         [ 0.3819,  0.8607, -0.3368,  0.0222]]]), 'VERTEX_SE3__4': tensor([[[ 0.1824,  0.4791, -0.8586,  0.0552],\n",
+       "         [-0.8338, -0.3874, -0.3933,  0.0504],\n",
+       "         [-0.5210,  0.7877,  0.3288,  0.3654]]]), 'VERTEX_SE3__5': tensor([[[-0.7348, -0.1973, -0.6490,  0.4393],\n",
+       "         [-0.3438, -0.7164,  0.6071, -0.0790],\n",
+       "         [-0.5847,  0.6692,  0.4585,  0.6736]]]), 'VERTEX_SE3__6': tensor([[[-0.9449,  0.2143, -0.2473,  0.8480],\n",
+       "         [-0.3043, -0.2973,  0.9050,  0.1419],\n",
+       "         [ 0.1204,  0.9304,  0.3462,  0.7674]]]), 'VERTEX_SE3__7': tensor([[[-0.2248, -0.5004, -0.8361,  0.7042],\n",
+       "         [-0.7715, -0.4327,  0.4664,  0.4863],\n",
+       "         [-0.5951,  0.7499, -0.2888,  0.4203]]]), 'VERTEX_SE3__8': tensor([[[ 0.7787, -0.4848, -0.3983,  0.3688],\n",
+       "         [-0.4378, -0.8745,  0.2085,  0.2973],\n",
+       "         [-0.4494,  0.0120, -0.8933,  0.1030]]]), 'VERTEX_SE3__9': tensor([[[ 0.9365,  0.0118,  0.3505,  0.0125],\n",
+       "         [ 0.1793, -0.8750, -0.4496,  0.2069],\n",
+       "         [ 0.3014,  0.4839, -0.8216, -0.0853]]]), 'line_process_0_9': tensor([[0.9999]])}, status=array([<NonlinearOptimizerStatus.CONVERGED: 1>], dtype=object), converged_iter=tensor([557]), best_iter=tensor([555]), err_history=None, last_err=tensor([0.0008]), best_err=tensor([0.0008]), state_history=None)"
       ]
      },
      "execution_count": 6,
@@ -559,7 +553,6 @@
     }
    ],
    "source": [
-    "#print(pose_graph._objective.error().shape)\n",
     "pose_graph._optimize(max_iterations=1e3, step_size=0.01, damping=0.01, verbose=False)\n",
     "#info = pose_graph.optimize_two_steps(max_iterations=1e3, step_size=0.01, l_ij_threshold=0.25, damping=0.2, verbose=False)\n",
     "#print(info)"
@@ -576,34 +569,34 @@
      "output_type": "stream",
      "text": [
       "Rotation error of vertex_0 before optimization 0.0, after optimization: 0.0\n",
-      "Translation error of vertex_0 before optimization 0.0, after optimization: 0.0049241213127970695\n",
+      "Translation error of vertex_0 before optimization 0.0, after optimization: 0.004262770991772413\n",
       "\n",
-      "Rotation error of vertex_1 before optimization nan, after optimization: nan\n",
-      "Translation error of vertex_1 before optimization 0.0007512992597185075, after optimization: 0.002209974220022559\n",
+      "Rotation error of vertex_1 before optimization 0.0013810680247843266, after optimization: 0.003126526717096567\n",
+      "Translation error of vertex_1 before optimization 0.0013131033629179, after optimization: 0.004798325709998608\n",
       "\n",
-      "Rotation error of vertex_2 before optimization nan, after optimization: 0.003201875602826476\n",
-      "Translation error of vertex_2 before optimization 0.0008897980442270637, after optimization: 0.0023524491116404533\n",
+      "Rotation error of vertex_2 before optimization 0.0009765625, after optimization: 0.0023920803796499968\n",
+      "Translation error of vertex_2 before optimization 0.001915666158311069, after optimization: 0.0037466243375092745\n",
       "\n",
-      "Rotation error of vertex_3 before optimization 0.0009765625, after optimization: 0.0037822125013917685\n",
-      "Translation error of vertex_3 before optimization 0.0012935486156493425, after optimization: 0.0027890850324183702\n",
+      "Rotation error of vertex_3 before optimization 0.0018269814318045974, after optimization: 0.0029296884313225746\n",
+      "Translation error of vertex_3 before optimization 0.0025006108917295933, after optimization: 0.003270824206992984\n",
       "\n",
-      "Rotation error of vertex_4 before optimization 0.001691456069238484, after optimization: 0.004085256718099117\n",
-      "Translation error of vertex_4 before optimization 0.0021228499244898558, after optimization: 0.0020404031965881586\n",
+      "Rotation error of vertex_4 before optimization 0.0017605233006179333, after optimization: nan\n",
+      "Translation error of vertex_4 before optimization 0.0023732867557555437, after optimization: 0.002721663098782301\n",
       "\n",
-      "Rotation error of vertex_5 before optimization 0.00248975632712245, after optimization: 0.0034870272502303123\n",
-      "Translation error of vertex_5 before optimization 0.002975358162075281, after optimization: 0.0021392374765127897\n",
+      "Rotation error of vertex_5 before optimization 0.0006905339541845024, after optimization: 0.0011960399569943547\n",
+      "Translation error of vertex_5 before optimization 0.0029949939344078302, after optimization: 0.002553114900365472\n",
       "\n",
-      "Rotation error of vertex_6 before optimization 0.003382913302630186, after optimization: 0.004931403789669275\n",
-      "Translation error of vertex_6 before optimization 0.0018442535074427724, after optimization: 0.0009417541441507638\n",
+      "Rotation error of vertex_6 before optimization 0.0012918708380311728, after optimization: 0.0034526714589446783\n",
+      "Translation error of vertex_6 before optimization 0.003475072793662548, after optimization: 0.002043691463768482\n",
       "\n",
-      "Rotation error of vertex_7 before optimization 0.0028471455443650484, after optimization: 0.003164425492286682\n",
-      "Translation error of vertex_7 before optimization 0.0025477828457951546, after optimization: 0.0025366090703755617\n",
+      "Rotation error of vertex_7 before optimization 0.0011960399569943547, after optimization: 0.0036211926490068436\n",
+      "Translation error of vertex_7 before optimization 0.004022927954792976, after optimization: 0.002327611204236746\n",
       "\n",
-      "Rotation error of vertex_8 before optimization 0.0034526714589446783, after optimization: 0.0016194458585232496\n",
-      "Translation error of vertex_8 before optimization 0.003531468566507101, after optimization: 0.002878818428143859\n",
+      "Rotation error of vertex_8 before optimization 0.000845727976411581, after optimization: 0.004256740212440491\n",
+      "Translation error of vertex_8 before optimization 0.004249516408890486, after optimization: 0.0023529515601694584\n",
       "\n",
-      "Rotation error of vertex_9 before optimization 0.0034526714589446783, after optimization: 0.00444845762103796\n",
-      "Translation error of vertex_9 before optimization 0.00215635122731328, after optimization: 0.0040641287341713905\n",
+      "Rotation error of vertex_9 before optimization 0.0015440810238942504, after optimization: 0.0046834335662424564\n",
+      "Translation error of vertex_9 before optimization 0.0041100881062448025, after optimization: 0.00341571937315166\n",
       "\n"
      ]
     }
@@ -614,12 +607,10 @@
     "for idx in range(len(abs_pose_list)):  \n",
     "    abs_pose_optimized = pose_graph._objective.get_optim_var(f\"VERTEX_SE3__{idx}\")\n",
     "    rot_opt = abs_pose_optimized.rotation().tensor.squeeze()\n",
-    "    #trans_opt = abs_pose_optimized.translation().tensor\n",
     "    trans_opt = abs_pose_optimized.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    abs_pose_gt = abs_pose_gt_list[idx]\n",
     "    rot_gt = abs_pose_gt.rotation().tensor.squeeze()\n",
-    "    #trans_gt = abs_pose_gt.translation().tensor\n",
     "    trans_gt = abs_pose_gt.to_x_y_z_quaternion()[..., :3]\n",
     "\n",
     "    rot_error_after.append(torch.acos((torch.trace(torch.matmul(rot_opt.t(), rot_gt)) - 1) / 2))\n",
@@ -667,8 +658,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1227\n",
-      "13\n"
+      "1021\n",
+      "11\n"
      ]
     }
    ],
