--- a/tests_notebook/test_pose_graph_vectorization_with_theseus.ipynb
+++ b/tests_notebook/test_pose_graph_vectorization_with_theseus.ipynb
@@ -126,7 +126,7 @@
     "            vertex_j: th.SE3,\n",
     "            edge: GaussianSLAMEdge,\n",
     "            gaussian_means: torch.tensor,\n",
-    "            match_num : int, # kapa\n",
+    "            match_num: int, # kapa\n",
     "            tau: float=0.2, # fairly liberal distance threshold\n",
     "        ):\n",
     "        \n",
@@ -482,33 +482,39 @@
       "adding edge 7 to pose graph, current edge is an odometry edge.\n",
       "adding edge 8 to pose graph, current edge is an odometry edge.\n",
       "adding edge 9 to pose graph, current edge is an loop edge.\n",
-      "cost_weight_mu = 12.649110794067383\n",
+      "cost_weight_mu = 4.0\n",
       "adding edge 10 to pose graph, current edge is an loop edge.\n",
-      "cost_weight_mu = 12.649110794067383\n",
+      "cost_weight_mu = 4.0\n",
       "adding edge 11 to pose graph, current edge is an loop edge.\n",
-      "cost_weight_mu = 12.649110794067383\n"
+      "cost_weight_mu = 2.190890312194824\n"
      ]
     }
    ],
    "source": [
-    "point_list, abs_pose_gt_list, abs_pose_list, edge_list = create_data()\n",
-    "add_loop_data(0, 7, abs_pose_gt_list, edge_list)\n",
-    "add_loop_data(1, 8, abs_pose_gt_list, edge_list)\n",
-    "add_loop_data(2, 9, abs_pose_gt_list, edge_list)\n",
+    "point_list, abs_pose_gt_list, abs_pose_list, edge_list = create_data(\n",
+    "    num_poses=10,\n",
+    "    num_pts=100,\n",
+    "    rotation_noise=0.1,\n",
+    "    translation_noise=0.05\n",
+    ")\n",
+    "add_loop_data(0, 7, abs_pose_gt_list, edge_list, measurement_noise=1e-3)\n",
+    "add_loop_data(1, 8, abs_pose_gt_list, edge_list, measurement_noise=1e-3)\n",
+    "add_loop_data(2, 9, abs_pose_gt_list, edge_list, measurement_noise=1e-1)\n",
     "\n",
     "rot_error_before = []\n",
     "trans_error_before = []\n",
     "for idx in range(len(abs_pose_list)):\n",
     "    abs_pose = abs_pose_list[idx]\n",
     "    rot = abs_pose.rotation().tensor.squeeze()\n",
-    "    trans = abs_pose.translation().tensor\n",
+    "    trans = abs_pose.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    abs_pose_gt = abs_pose_gt_list[idx]\n",
     "    rot_gt = abs_pose_gt.rotation().tensor.squeeze()\n",
-    "    trans_gt = abs_pose.translation().tensor\n",
+    "    trans_gt = abs_pose_gt.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    rot_error_before.append(torch.acos((torch.trace(torch.matmul(rot.t(), rot_gt)) - 1) / 2))\n",
-    "    trans_error_before.append(torch.abs(trans @ trans_gt.t().squeeze()))\n",
+    "    #trans_error_before.append(torch.abs(trans @ trans_gt.t().squeeze()))\n",
+    "    trans_error_before.append(torch.norm(trans - trans_gt))\n",
     "\n",
     "\n",
     "print(\"Constructing a pose graph for Gaussian Splatting SLAM.\")\n",
@@ -540,38 +546,40 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First step optimization, dealing with 15 cost functions\n",
-      "Second step optimization, dealing with 15 cost functions\n",
-      "NonlinearOptimizerInfo(best_solution={'VERTEX_SE3__0': tensor([[[ 0.9967,  0.0627, -0.0524, -0.0174],\n",
-      "         [-0.0641,  0.9976, -0.0255, -0.0143],\n",
-      "         [ 0.0507,  0.0288,  0.9983, -0.0517]]]), 'VERTEX_SE3__1': tensor([[[ 0.7357, -0.5913,  0.3304,  0.0890],\n",
-      "         [ 0.1662,  0.6305,  0.7582,  0.2937],\n",
-      "         [-0.6566, -0.5029,  0.5621, -0.4849]]]), 'VERTEX_SE3__2': tensor([[[ 0.7741, -0.3741,  0.5106,  0.1566],\n",
-      "         [-0.0653,  0.7552,  0.6523,  0.6237],\n",
-      "         [-0.6296, -0.5383,  0.5602, -0.6817]]]), 'VERTEX_SE3__3': tensor([[[-0.1135, -0.4142,  0.9031,  0.0714],\n",
-      "         [ 0.4462,  0.7909,  0.4188,  0.6758],\n",
-      "         [-0.8877,  0.4505,  0.0951, -0.5051]]]), 'VERTEX_SE3__4': tensor([[[ 0.5421, -0.1870,  0.8192, -0.0935],\n",
-      "         [ 0.8339,  0.2397, -0.4971,  0.8443],\n",
-      "         [-0.1034,  0.9527,  0.2859, -0.0371]]]), 'VERTEX_SE3__5': tensor([[[ 0.1213, -0.9631,  0.2402, -0.0135],\n",
-      "         [ 0.9419,  0.0353, -0.3341,  1.0111],\n",
-      "         [ 0.3133,  0.2668,  0.9114,  0.3324]]]), 'VERTEX_SE3__6': tensor([[[-0.2382, -0.9553, -0.1749, -0.2549],\n",
-      "         [ 0.9421, -0.1835, -0.2807,  1.2636],\n",
-      "         [ 0.2361, -0.2317,  0.9437,  0.4332]]]), 'VERTEX_SE3__7': tensor([[[-0.4730, -0.7286, -0.4954, -0.2890],\n",
-      "         [ 0.6336,  0.1093, -0.7659,  1.2770],\n",
-      "         [ 0.6121, -0.6762,  0.4099,  0.6583]]]), 'VERTEX_SE3__8': tensor([[[ 0.0479, -0.4468, -0.8933, -0.3664],\n",
-      "         [ 0.6053,  0.7244, -0.3299,  1.1379],\n",
-      "         [ 0.7946, -0.5249,  0.3052,  0.7592]]]), 'VERTEX_SE3__9': tensor([[[-0.3249, -0.7117, -0.6228,  0.1802],\n",
-      "         [ 0.1806,  0.5997, -0.7796,  1.1976],\n",
-      "         [ 0.9283, -0.3658, -0.0663,  0.7761]]]), 'line_process_0_7': tensor([[0.9999]]), 'line_process_1_8': tensor([[0.9999]]), 'line_process_2_9': tensor([[0.9999]])}, status=array([<NonlinearOptimizerStatus.MAX_ITERATIONS: 2>], dtype=object), converged_iter=tensor([-1]), best_iter=tensor([275]), err_history=None, last_err=tensor([35.7030]), best_err=tensor([30.8966]), state_history=None)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "NonlinearOptimizerInfo(best_solution={'VERTEX_SE3__0': tensor([[[ 0.9958, -0.0797, -0.0459, -0.0276],\n",
+       "         [ 0.0692,  0.9780, -0.1969,  0.1158],\n",
+       "         [ 0.0606,  0.1928,  0.9794,  0.0507]]]), 'VERTEX_SE3__1': tensor([[[ 0.9908,  0.0381,  0.1302, -0.0533],\n",
+       "         [-0.0276,  0.9963, -0.0813, -0.1701],\n",
+       "         [-0.1328,  0.0769,  0.9881,  0.3852]]]), 'VERTEX_SE3__2': tensor([[[ 0.5183,  0.0870,  0.8507,  0.1567],\n",
+       "         [-0.4843,  0.8498,  0.2082,  0.2775],\n",
+       "         [-0.7049, -0.5199,  0.4826,  0.4262]]]), 'VERTEX_SE3__3': tensor([[[ 0.1168,  0.5042,  0.8556,  0.3942],\n",
+       "         [ 0.0883,  0.8528, -0.5146, -0.2484],\n",
+       "         [-0.9892,  0.1356,  0.0551,  0.6395]]]), 'VERTEX_SE3__4': tensor([[[ 0.4750,  0.6270,  0.6174,  0.4285],\n",
+       "         [-0.0599,  0.7231, -0.6882, -0.1073],\n",
+       "         [-0.8779,  0.2899,  0.3810,  0.9691]]]), 'VERTEX_SE3__5': tensor([[[ 0.9255, -0.1390,  0.3523, -0.0969],\n",
+       "         [ 0.3663,  0.5647, -0.7395,  0.0589],\n",
+       "         [-0.0962,  0.8135,  0.5736,  0.8370]]]), 'VERTEX_SE3__6': tensor([[[ 0.7981,  0.3211, -0.5098, -0.1491],\n",
+       "         [-0.5522,  0.0517, -0.8321,  0.0792],\n",
+       "         [-0.2409,  0.9456,  0.2186,  0.5734]]]), 'VERTEX_SE3__7': tensor([[[ 0.7494,  0.4189, -0.5127, -0.6107],\n",
+       "         [-0.6489,  0.3110, -0.6944,  0.0295],\n",
+       "         [-0.1314,  0.8531,  0.5049,  0.8157]]]), 'VERTEX_SE3__8': tensor([[[ 0.4283,  0.2422, -0.8706, -0.3478],\n",
+       "         [-0.5661,  0.8228, -0.0496,  0.3065],\n",
+       "         [ 0.7043,  0.5141,  0.4895,  0.6157]]]), 'VERTEX_SE3__9': tensor([[[ 0.6402,  0.5582, -0.5277, -0.0982],\n",
+       "         [-0.1773,  0.7758,  0.6056,  0.3898],\n",
+       "         [ 0.7475, -0.2941,  0.5957,  0.9329]]]), 'line_process_0_7': tensor([[0.9998]]), 'line_process_1_8': tensor([[0.9999]]), 'line_process_2_9': tensor([[0.9999]])}, status=array([<NonlinearOptimizerStatus.MAX_ITERATIONS: 2>], dtype=object), converged_iter=tensor([-1]), best_iter=tensor([915]), err_history=None, last_err=tensor([2.3241]), best_err=tensor([2.2317]), state_history=None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "info = pose_graph.optimize_two_steps(max_iterations=1e3, step_size=0.02, l_ij_threshold=0.25, damping=0.1, verbose=False)\n",
-    "print(info)"
+    "#info = pose_graph.optimize_two_steps(max_iterations=1e3, step_size=0.05, l_ij_threshold=0.25, damping=0.1, verbose=False)\n",
+    "#print(info)\n",
+    "pose_graph._optimize(max_iterations=1e3, step_size=0.01, damping=0.01, verbose=False)"
    ]
   },
   {
@@ -584,35 +592,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rotation error of vertex_0 before optimization 0.0, after optimization: 0.08538861572742462\n",
-      "Translation error of vertex_0 before optimization tensor([0.]), after optimization: tensor([0.0559])\n",
+      "Rotation error of vertex_0 before optimization 0.0, after optimization: nan\n",
+      "Translation error of vertex_0 before optimization 0.0, after optimization: 0.0\n",
       "\n",
-      "Rotation error of vertex_1 before optimization 0.10006792098283768, after optimization: 0.13244080543518066\n",
-      "Translation error of vertex_1 before optimization tensor([0.3377]), after optimization: tensor([0.0175])\n",
+      "Rotation error of vertex_1 before optimization 0.12016863375902176, after optimization: 0.07247258722782135\n",
+      "Translation error of vertex_1 before optimization 0.06856519728899002, after optimization: 0.058886561542749405\n",
       "\n",
-      "Rotation error of vertex_2 before optimization 0.07194383442401886, after optimization: 0.10689190775156021\n",
-      "Translation error of vertex_2 before optimization tensor([0.9590]), after optimization: tensor([0.2433])\n",
+      "Rotation error of vertex_2 before optimization 0.06997665017843246, after optimization: 0.07151468843221664\n",
+      "Translation error of vertex_2 before optimization 0.09170907735824585, after optimization: 0.054567016661167145\n",
       "\n",
-      "Rotation error of vertex_3 before optimization 0.13692331314086914, after optimization: 0.1700340062379837\n",
-      "Translation error of vertex_3 before optimization tensor([0.7582]), after optimization: tensor([0.4397])\n",
+      "Rotation error of vertex_3 before optimization 0.15978862345218658, after optimization: 0.0964701697230339\n",
+      "Translation error of vertex_3 before optimization 0.1356438845396042, after optimization: 0.13132673501968384\n",
       "\n",
-      "Rotation error of vertex_4 before optimization 0.16074852645397186, after optimization: 0.18198218941688538\n",
-      "Translation error of vertex_4 before optimization tensor([0.7241]), after optimization: tensor([0.9752])\n",
+      "Rotation error of vertex_4 before optimization 0.17929285764694214, after optimization: 0.04165314510464668\n",
+      "Translation error of vertex_4 before optimization 0.16625680029392242, after optimization: 0.10867732763290405\n",
       "\n",
-      "Rotation error of vertex_5 before optimization 0.11181706190109253, after optimization: 0.11149931699037552\n",
-      "Translation error of vertex_5 before optimization tensor([1.1097]), after optimization: tensor([1.4501])\n",
+      "Rotation error of vertex_5 before optimization 0.30387380719184875, after optimization: 0.03313275799155235\n",
+      "Translation error of vertex_5 before optimization 0.2399270087480545, after optimization: 0.15392327308654785\n",
       "\n",
-      "Rotation error of vertex_6 before optimization 0.14579986035823822, after optimization: 0.11471232026815414\n",
-      "Translation error of vertex_6 before optimization tensor([1.7967]), after optimization: tensor([1.8022])\n",
+      "Rotation error of vertex_6 before optimization 0.36959782242774963, after optimization: 0.10540898144245148\n",
+      "Translation error of vertex_6 before optimization 0.16452020406723022, after optimization: 0.07862942665815353\n",
       "\n",
-      "Rotation error of vertex_7 before optimization 0.1717904508113861, after optimization: 0.09851297736167908\n",
-      "Translation error of vertex_7 before optimization tensor([2.0603]), after optimization: tensor([1.9852])\n",
+      "Rotation error of vertex_7 before optimization 0.43567708134651184, after optimization: 0.05729511007666588\n",
+      "Translation error of vertex_7 before optimization 0.14827609062194824, after optimization: 0.028831660747528076\n",
       "\n",
-      "Rotation error of vertex_8 before optimization 0.1776786893606186, after optimization: 0.10465624183416367\n",
-      "Translation error of vertex_8 before optimization tensor([2.0242]), after optimization: tensor([1.8837])\n",
-      "\n",
-      "Rotation error of vertex_9 before optimization 0.2647689878940582, after optimization: 0.14870290458202362\n",
-      "Translation error of vertex_9 before optimization tensor([1.9734]), after optimization: tensor([2.0597])\n",
+      "Rotation error of vertex_8 before optimization 0.44447216391563416, after optimization: 0.04734000563621521\n",
+      "Translation error of vertex_8 before optimization 0.2308434695005417, after optimization: 0.05517371743917465\n",
       "\n"
      ]
     }
@@ -620,19 +625,24 @@
    "source": [
     "rot_error_after = []\n",
     "trans_error_after = []\n",
+    "\n",
+    "abs_pose_optimized_0 = pose_graph._objective.get_optim_var(\"VERTEX_SE3__0\")\n",
     "for idx in range(len(abs_pose_list)):  \n",
     "    abs_pose_optimized = pose_graph._objective.get_optim_var(f\"VERTEX_SE3__{idx}\")\n",
+    "    abs_pose_optimized = abs_pose_optimized_0.inverse().compose(abs_pose_optimized)\n",
     "    rot_opt = abs_pose_optimized.rotation().tensor.squeeze()\n",
-    "    trans_opt = abs_pose_optimized.translation().tensor\n",
+    "    trans_opt = abs_pose_optimized.to_x_y_z_quaternion()[..., :3]\n",
     "    \n",
     "    abs_pose_gt = abs_pose_gt_list[idx]\n",
     "    rot_gt = abs_pose_gt.rotation().tensor.squeeze()\n",
-    "    trans_gt = abs_pose.translation().tensor\n",
+    "    trans_gt = abs_pose_gt.to_x_y_z_quaternion()[..., :3]\n",
     "\n",
     "    rot_error_after.append(torch.acos((torch.trace(torch.matmul(rot_opt.t(), rot_gt)) - 1) / 2))\n",
-    "    trans_error_after.append(torch.abs(trans_opt @ trans_gt.t().squeeze()))\n",
+    "    #trans_error_after.append(torch.abs(trans_opt @ trans_gt.t().squeeze()))\n",
+    "    trans_error_after.append(torch.norm(trans_opt - trans_gt))\n",
+    "    \n",
     "\n",
-    "for idx in range(len(abs_pose_list)):  \n",
+    "for idx in range(len(abs_pose_list)-1):  \n",
     "    print(f\"Rotation error of vertex_{idx} before optimization {rot_error_before[idx]}, after optimization: {rot_error_after[idx]}\")\n",
     "    print(f\"Translation error of vertex_{idx} before optimization {trans_error_before[idx]}, after optimization: {trans_error_after[idx]}\")\n",
     "    print()"
